# python-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  docs.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/reference/: index.html
0.1.0/search/: search_index.json
docs/: index.md  reference.md
graph_models/: __init__.py  graphs.py
notebooks/: figure_creator.ipynb  table_creater.ipynb
paper/: main.tex
paper/sections/: conclusion.tex  experiments.tex  introduction.tex  methodology.tex
paper/tables/: results.tex
tests/: test_graphs.py
